--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server"
+    "start": "live-server --host=0.0.0.0 --port=8080"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,6 @@
   },
   "homepage": "https://gitlab.com/GerardoSoto/frontenddeveloper#readme",
   "devDependencies": {
-    "liveserver": "^0.1.20"
+    "live-server": "^1.2.1"
   }
 }
