--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server --host=0.0.0.0 --port=8080"
+    "dev": "nodemon index.js",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
