--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   },
   "homepage": "https://gitlab.com/GerardoSoto/frontenddeveloper#readme",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1"
   }
 }
