--- a/package.json
+++ b/package.json
@@ -23,32 +23,12 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "live-server": "^1.2.1",
+    "live-server": "^1.1.0",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "faker": "^5.5.3"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
