--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "lint": "eslint",
-    "start": "node index.js"
+    "start": "node index.js",
+    "web": "node ./public/index.js"
   },
   "repository": {
     "type": "git",
