--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
     "live-server": "^1.1.0",
     "nodemon": "^2.0.14",
-    "prettier": "^2.4.1",
-    "faker": "^5.5.3"
+    "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "express": "^4.17.1"
   }
 }
+
 
 
 
