--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "eslint-plugin-prettier": "^4.0.0",
     "live-server": "^1.1.0",
     "nodemon": "^2.0.14",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "fs": "^0.0.1-security"
+
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "joi": "^17.4.2",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "fs": "^0.0.1-security",
+    "joi": "^17.4.2"
   },
-
-  "engines":{
+  "engines": {
     "node": "16.x"
   }
-
 }
